[gd_scene load_steps=6 format=3 uid="uid://bodhpoffslf6k"]

[ext_resource type="Script" path="res://scripts/pipe.gd" id="1_6sju0"]
[ext_resource type="Texture2D" uid="uid://celqp0xgkqk4t" path="res://assets/sprites/pipe-green.png" id="1_bhpg6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6rbfp"]
size = Vector2(52, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbeh3"]
size = Vector2(48, 296)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nx8ld"]
size = Vector2(0, 97)

[node name="Pipe" type="Area2D"]
z_index = -1
script = ExtResource("1_6sju0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_bhpg6")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -417)
rotation = -3.14159
texture = ExtResource("1_bhpg6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -148)
shape = SubResource("RectangleShape2D_6rbfp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_rbeh3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(0, -269)
shape = SubResource("RectangleShape2D_6rbfp")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(0, -429)
shape = SubResource("RectangleShape2D_rbeh3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="score_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="score_detection"]
position = Vector2(-20, -208.5)
shape = SubResource("RectangleShape2D_nx8ld")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="score_detection" to="." method="_on_score_detection_body_entered"]
[connection signal="body_exited" from="score_detection" to="." method="_on_score_detection_body_exited"]
